2639.	[bug]		Silence compiler warnings in gssapi code. [RT #19954]

2637.	[func]		Rationalize dnssec-signzone's signwithkey() calling.
			[RT #19959]

2635.	[bug]		isc_inet_ntop() incorrectly handled 0.0/16 addresses.
			[RT #19716]

2633.	[bug]		Handle 15 bit rand() functions. [RT #19783]

2632.	[func]		util/kit.sh: warn if documentation appears to be out of
			date.  [RT #19922]

2625.	[bug]		Missing UNLOCK in rbtdb.c. [RT #19865]

2621.	[doc]		Made copyright boilterplate consistent.  [RT #19833]

2920.	[bug]		Delay thawing the zone until the reload of it has
			completed successfully.  [RT #19750]

2618.	[bug]		The sdb and sdlz db_interator_seek() methods could
			loop infinitely. [RT #19847]

2617.	[bug]		ifconfig.sh failed to emit an error message when
			run from the wrong location. [RT #19375]

2616.	[bug]		'host' used the nameservers from resolv.conf even
			when a explicit nameserver was specified. [RT #19852]

2615.	[bug]		"__attribute__((unused))" was in the wrong place
			for ia64 gcc builds. [RT #19854]

2614.	[port]		win32: 'named -v' should automatically be executed
			in the foreground. [RT #19844]

2613.	[bug]		Option argument validation was missing for
			dnssec-dsfromkey. [RT #19828]

2610.	[port]		sunos: Change #2363 was not complete. [RT #19796]

2608.	[func]		Perform post signing verification checks in
			dnssec-signzone.  These can be disabled with -P.

			The post sign verification test ensures that for each
			algorithm in use there is at least one non revoked
			self signed KSK key.  That all revoked KSK keys are
			self signed.  That all records in the zone are signed
			by the algorithm.  [RT #19653]

2589.	[bug]		dns_db_unregister() failed to clear '*dbimp'.
		        [RT #19626]

2581.	[contrib]	dlz/mysql set MYSQL_OPT_RECONNECT option on connection.
			Requires MySQL 5.0.19 or later. [RT #19084]

2580.	[bug]		UpdateRej statistics counter could be incremented twice
			for one rejection. [RT #19476]

	--- 9.6.1 released ---
